--- a/style.css
+++ b/style.css
@@ -299,6 +299,147 @@ svg {
 
 
 
+.tool_content_1 table {
+	width: 100%;
+	height: 100%;
+	padding: 1px 3px;
+	border-spacing: 5px;
+}
+.tool_content_1 .pad_1 {
+	position: relative;
+	width: 164px;
+	background: #313131;
+	border: solid 1px #2a2a2a;
+	border-radius: 4px;
+	padding: 0;
+	vertical-align: top;
+}
+.tool_content_1 .pad_2 {
+	position: relative;
+	width: 46px;
+	padding: 0;
+}
+.tool_content_1 .pad_3 {
+}
+
+
+
+
+.tool_content_1 .form {
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+}
+.tool_content_1 .line {
+	height: 40px;
+	padding-top: 5px;
+	text-align: right;
+	vertical-align: middle;
+}
+
+.tool_content_1 .current_cell_info {
+	overflow: hidden;
+	white-space: nowrap;
+	text-align: left;
+	padding: 6px;
+	font-weight: 300;
+	font-family: '微软雅黑',helvetica,monospace;
+	font-size: 11px;
+	color: #777;
+}
+.tool_content_1 .info_left {
+	white-space: nowrap;
+	display: inline-block;
+	overflow: hidden;
+	width: 68px;
+	/*border-right: solid 1px #2b2b2b;*/
+}
+.tool_content_1 .info_right {
+	white-space: nowrap;
+	overflow: hidden;
+	display: inline-block;
+	margin-left: 5px;
+}
+.tool_content_1 .current_cell_info h3 {
+	font-size: 10px;
+	color: #555;
+	margin-bottom: 2px;
+	text-transform: uppercase;
+}
+.tool_content_1 .current_cell_info .info_left span {
+	margin: 0 2px;
+}
+.tool_content_1 #cell_coordinate {
+	display: none;
+}
+
+
+.tool_content_1 .pad_1 .icon {
+	display: inline-block;
+	width: 25px;
+	height: 26px;
+	margin-right: 5px;
+	background-image: url(images/icon_dimens.svg);
+	background-size: 100px;
+	background-position-y: top;
+	vertical-align: middle;
+}
+.tool_content_1 .pad_1 .icon_w {
+	background-position-x: left;
+}
+.tool_content_1 .pad_1 .icon_h {
+	background-position-x: -25px;
+}
+.tool_content_1 .pad_1 .icon_t {
+	background-position-x: -50px;
+}
+
+
+
+
+.tool_content_1 .key {
+	display: table-cell;
+}
+.tool_content_1 #key_left {
+	width: 50px;
+}
+.tool_content_1 #key_right {
+	width: 50px;
+}
+.tool_content_1 #key_up {
+	height: 35px;
+}
+.tool_content_1 #key_down {
+	height: 35px;
+}
+
+.tool_content_1 .key .icon {
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	background-image: url(images/icon_dirs.svg);
+	background-size: 62px;
+	background-position-y:0;
+	background-repeat: no-repeat;
+}
+.tool_content_1 #key_left .icon {
+	background-position-x: left;
+}
+.tool_content_1 #key_right .icon {
+	background-position-x: -16px;
+}
+.tool_content_1 #key_up .icon {
+	background-position-x: -32px;
+}
+.tool_content_1 #key_down .icon {
+	background-position-x: right;
+}
+
+
+
+
+
+
 .tool_content_2 table {
 	width: 100%;
 	height: 100%;
@@ -491,6 +632,7 @@ svg {
 
 
 
+
 .tool_content_4 .wrapper {
 	height: 100%;
 	overflow: scroll;
@@ -575,7 +717,7 @@ svg {
 	height: 100%;
 }
 .tool_tab {
-	width: 50%;
+	width: 33%;
 	height: 100%;
 	color: #555;
 	font-size: 18px;
